# PyTorch-workflow-mastery

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
configs/: default.yaml
notebooks/: 0-eda-cifar10-dataset.ipynb  1-pytorch-workflow.ipynb  2-pytorch-workflow-w&b.ipynb  3-pytorch-workflow-w&b-optuna.ipynb
scripts/: train.py
src/: config.py  dataset.py
src/models/: resnet18.py
src/training/: optimization.py  trainer.py
